--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
             <li><a href="index"><i class="fas fa-address-book"></i>Index</a></li>
             <li><a href="adminpage"><i class="fas fa-user-circle"></i>Admin</a></li>
             {% endif %}
-            <li><a href="logout"></i >Déconexion</a></li>
+            <li><a href="logout"></i >Déconnexion</a></li>
         </ul> 
     </div>
     <div class="main_content">
