--- a/templates/application.html
+++ b/templates/application.html
@@ -13,6 +13,7 @@
           </tr>
         </thead>
         {% for cours in cours %}
+        {% if cours.2 == date %}
         <tbody>
           <tr>
             <td>{{cours.1}}</td>
@@ -27,6 +28,7 @@
             </td>
           </tr>
         </tbody>
+        {% endif %}
         {% endfor %}
         </thead>
        </table>
@@ -74,6 +76,39 @@
         {% endif %}{% endfor %}
       </tbody>
     </table>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card card-body">
+      <table class="table table-striped table-hover table-bordered table-sm bg-white">
+        <thead>
+          <tr>
+            <td>Cours</td>
+            <td>Date</td>
+            <td>Début</td>
+            <td>Fin</td>
+            <td>Lien</td>
+          </tr>
+        </thead>
+        {% for cours in cours %}
+        <tbody>
+          <tr>
+            <td>{{cours.1}}</td>
+            <td>{{cours.2}}</td>
+            <td>{{cours.3}}</td>
+            <td>{{cours.4}}</td>
+            <td>
+              <a href="{{cours.5}}" class="btn btn-secondary">Lien du Zoom</a>
+              {% if account['admin'] == 1 %}
+              <a href="deletecours/{{cours.0}}" class="btn btn-danger btn-delete">Suppr</a>
+              {% endif %}
+            </td>
+          </tr>
+        </tbody>
+        {% endfor %}
+        </thead>
+       </table>
+      </div>
     </div>
   </div>
   {% endif %}
