--- a/templates/pi2.html
+++ b/templates/pi2.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>{% block title%} {% endblock %}</title>
+    <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/style.css')}}">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.5.0/main.min.css">
+
+  {% block head%} {% endblock %}
+</head>
     <body>
         <div id="glowscript" class="glowscript">
             <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -21,27 +30,27 @@
                     scene.width = 1200
                     scene.height = 720
                     scene.range = 1.3
-
-                    var l1frame = {{model}}
-                    var lframe = l1frame[1]
-                    var  model =[]
+                    scene.background=color.gray(0.9)
 
                     function rvect(lframe, ref) {
                         var vect = vector(ref[0] / 100 - lframe[0] / 100,
                             ref[1] / 100 - lframe[1] / 100,
-                            ref[2] / 100 - lframe[2] / 100)
+                            ref[2] / 100 - lframe[2] / 100)                        
                         return vect
                     }
+
+                    var l1frame = {{model}}
+                    var lframe = l1frame[1]
+                    var model = []
+                    var k = 0
 
                     for (var i = 0; i < lframe.length; i++) {
                         var point = sphere()
                         point.radius = 0.1
                         point.pos = rvect(lframe[i], lframe[1])
+                        point.color = color.gray(0.6)
                         model.push(point)
                     }
-                    var k = 0
-
-                   
                     var running = true
 
                     function Run(b) {
@@ -49,15 +58,13 @@
                         if (running) b.text = "Pause"
                         else b.text = "Run"
                     }
-
+    
                     button({text:"Pause", pos:scene.title_anchor, bind:Run})
 
                     while (true) {
-                      if (running){
-                        await rate(10)
+                        await rate(60)
                         lframe = l1frame[k]
-                        i = 0
-                        for (i = 1; i < lframe.length; i++) {
+                        for (var i = 1; i < lframe.length; i++) {
                             var atom = model[i]
                             atom.pos = rvect(lframe[i], lframe[1])
                         }
@@ -66,7 +73,6 @@
                             k = 0
                         }
                     }
-                  }
                 }
             ;$(function(){ window.__context = { glowscript_container: $("#glowscript").removeAttr("id") }; __main__() })})()
             // END JAVASCRIPT
