--- a/templates/edit.html
+++ b/templates/edit.html
@@ -9,19 +9,19 @@
           <div class="form-group">
 
           <div class="form-group">
-            <input type="text" name="ecole" value="{{contact.8}}" class="form-control">
+            <input type="text" placeholder = "École" name="ecole" value="{{contact.8}}" class="form-control">
           </div>
 
           <div class="form-group">
-            <input type="text" name="annee" value="{{contact.9}}" class="form-control">
+            <input type="text" placeholder = "Année" name="annee" value="{{contact.9}}" class="form-control">
           </div>
 
           <div class="form-group">
-            <input type="text" name="phone" value="{{contact.10}}" class="form-control">
+            <input type="text" placeholder = "Téléphone" name="phone" value="{{contact.10}}" class="form-control">
           </div>
 
           <div class="form-group">
-            <input type="text" name="email" value="{{contact.3}}" class="form-control">
+            <input type="text" placeholder = "E-mail" name="email" value="{{contact.3}}" class="form-control">
           </div>
 
           <div class="form-group">
