--- a/templates/home.html
+++ b/templates/home.html
@@ -25,7 +25,7 @@
             <h5>Téléphone : {{account['phone']}}</h5>
             <h5>Mail : {{account['email']}}</h5>
         </div>
-        <form action="{{url_for('edituser')}}" method="POST">
+        <form action="{{url_for('mainviews.edituser')}}" method="POST">
             <button class="btn btn-primary btn-block">Modifier</button>
         </form>
     </div>
