--- a/templates/password.html
+++ b/templates/password.html
@@ -10,10 +10,10 @@
     <div class="login">
       <h1>Mot de passe</h1>
       <div class="links">
-        <a href="{{ url_for('login') }}">Identifiant</a>
-        <a href="{{ url_for('password') }}" class="active">Mot de passe</a>
+        <a href="{{ url_for('mainviews.login') }}">Identifiant</a>
+        <a href="{{ url_for('mainviews.password') }}" class="active">Mot de passe</a>
       </div>
-      <form action="{{ url_for('password') }}" method="post">
+      <form action="{{ url_for('mainviews.password') }}" method="post">
         <label for="username">
           <i class="fas fa-user"></i>
         </label>
