--- a/templates/adminpage.html
+++ b/templates/adminpage.html
@@ -2,7 +2,7 @@
 {% block title%}Home Page{% endblock %}{% block body %}  
 <div class="card card-body">
 <center><h2>Ajouter un cours</h2></center>
-    <form action="{{url_for('add_cours')}}" method="POST">
+    <form action="{{url_for('adminviews.add_cours')}}" method="POST">
         <div class="form-group">
             <input type="text" class="form-control" name="titre" placeholder="Titre du cours">
         </div>
@@ -31,7 +31,7 @@
     <div class="col">
         <div class="card card-body">
         <center><h2>Ajouter une information d'accueil</h2></center>
-        <form action="{{url_for('addinfo')}}" method="POST">
+        <form action="{{url_for('adminviews.addinfo')}}" method="POST">
             <div class="form-group">
               <input type="text" class="form-control" name="datedb" placeholder="Date">
             </div>
