--- a/templates/edit-contact.html
+++ b/templates/edit-contact.html
@@ -7,42 +7,42 @@
       <div class="card card-body">
         <form action="/update/{{contact.0}}" method="POST">
           <div class="form-group">
-            <input type="text" name="username" value="{{contact.1}}" class="form-control">
+            <input type="text" placeholder = "Identifiant" name="username" value="{{contact.1}}" class="form-control">
 
               <div class="form-group">
-                <input type="text" name="nom" value="{{contact.6}}" class="form-control">
+                <input type="text" placeholder = "Nom" name="nom" value="{{contact.6}}" class="form-control">
                 </div>
 
                 <div class="form-group">
-                <input type="text" name="prenom" value="{{contact.7}}" class="form-control">
+                <input type="text" placeholder = "Prénom"  name="prenom" value="{{contact.7}}" class="form-control">
                 </div>
 
                 <div class="form-group">
-                <input type="text" name="ecole" value="{{contact.8}}" class="form-control">
+                <input type="text" placeholder = "École" name="ecole" value="{{contact.8}}" class="form-control">
                 </div>
 
                 <div class="form-group">
-                <input type="text" name="annee" value="{{contact.9}}" class="form-control">
+                <input type="text" placeholder = "Année" name="annee" value="{{contact.9}}" class="form-control">
                 </div>
 
                 <div class="form-group">
-                <input type="text" name="specialite" value="{{contact.11}}" class="form-control">
+                <input type="text" placeholder = "Spécialité" name="specialite" value="{{contact.11}}" class="form-control">
                 </div>
 
                 <div class="form-group">
-                  <input type="text" name="email" value="{{contact.3}}" class="form-control">
+                  <input type="text" placeholder = "E-mail"  name="email" value="{{contact.3}}" class="form-control">
                 </div>
 
                 <div class="form-group">
-                <input type="text" name="phone" value="{{contact.10}}" class="form-control">
+                <input type="text" placeholder = "Téléphone" name="phone" value="{{contact.10}}" class="form-control">
                 </div>
 
                 <div class="form-group">
-                  <input type="text" name="admin" value="{{contact.4}}" class="form-control">
+                  <input type="text" placeholder = "Admin (0|1)" name="admin" value="{{contact.4}}" class="form-control">
                 </div>
 
                 <div class="form-group">
-                  <input type="text" name="present" value="{{contact.5}}" class="form-control">
+                  <input type="text" placeholder = "Présent (0|1)" name="present" value="{{contact.5}}" class="form-control">
                 </div>
 
                 <div class="form-group">
