--- a/templates/application.html
+++ b/templates/application.html
@@ -1,5 +1,12 @@
 {% extends "layout.html" %}{% block title%}Présence{% endblock %}{% block body %}  
 <div class="row">
+    <div class="col">
+        <div class="card card-body">
+            <h2><center>Présence</center></h2>
+        </div>
+    </div>
+</div>
+<div class="row">
   <div class="col">
     <div class="card card-body">
       <table class="table table-striped table-hover table-bordered table-sm bg-white">
