--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,13 @@
 {% extends "layout.html" %}
 {% block title%}Index{% endblock %}
 {% block body %}
-
+<div class="row">
+    <div class="col">
+        <div class="card card-body">
+            <h2><center>Index</center></h2>
+        </div>
+    </div>
+</div>
   <div class="row">
     <div class="col">
       <table class="table table-striped table-hover table-bordered table-sm bg-white">
