--- a/templates/adminpage.html
+++ b/templates/adminpage.html
@@ -1,45 +1,68 @@
 {% extends "layout.html" %}
 {% block title%}Home Page{% endblock %}{% block body %}  
-<div class="card card-body">
-<center><h2>Ajouter un cours</h2></center>
-    <form action="{{url_for('adminviews.add_cours')}}" method="POST">
-        <div class="form-group">
-            <input type="text" class="form-control" name="titre" placeholder="Titre du cours">
-        </div>
-        <div class="form-group">
-            <input type="text" class="form-control" name="datedb" placeholder="Date (AAAA-MM-JJ)">
-        </div>
-        <div class="form-group">
-            <input type="text" class="form-control" name="horairedebut" placeholder="Horaire de début (HH:mm)">
-        </div>
-
-        <div class="form-group">
-            <input type="text" class="form-control" name="horairefin" placeholder="Horaire de fin (HH:mm)">
-        </div>
-
-        <div class="form-group">
-            <input type="text" class="form-control" name="colors" placeholder="Couleur (red, green, blue ou orange)">
-        </div>
-
-        <div class="form-group">
-            <input type="text" class="form-control" name="lien" placeholder="Lien">
-        </div>
-        <button class="btn btn-primary btn-block">Save</button>
-    </form>
-</div>
 <div class="row">
     <div class="col">
         <div class="card card-body">
-        <center><h2>Ajouter une information d'accueil</h2></center>
-        <form action="{{url_for('adminviews.addinfo')}}" method="POST">
-            <div class="form-group">
-              <input type="text" class="form-control" name="datedb" placeholder="Date">
+            <h2><center>Page administrateur</center></h2>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-6">
+        <div class="card card-body">
+            <center><h2>Ajouter un cours</h2></center>
+            <form action="{{url_for('adminviews.add_cours')}}" method="POST">
+                <div class="form-group">
+                    <input type="text" class="form-control" name="titre" placeholder="Titre du cours">
+                </div>
+                <div class="form-group">
+                    Date :
+                    <input type="date" id="form-control" name="datedb" value={{date}} min={{date}} max="2030-12-31">            
+                </div>
+                <div class="form-group">
+                    Horraire de début :
+                    <input type="time" id="appt" name="horairedebut" value="09:00" min="09:00" max="22:00" required>
+                </div>
+                <div class="form-group">
+                    Horraire de fin :
+                    <input type="time" id="appt" name="horairefin" value="18:00" min="09:00" max="22:00" required>
+                </div>
+                <div class="form-group">
+                    Couleur :
+                    <select name="colors" id="select" size="0.75">
+                        <option value="">Selectionnez une couleur&hellip;</option>
+                        <option value="blue" > Bleu</option>
+                        <option value="green"> Vert</option>
+                        <option value="yellow"> Jaune</option>
+                        <option value="orange"  >Orange</option>
+                        <option value="red"> Rouge</option>
+                        <option value="pink"> Rose</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control" name="lien" placeholder="Lien">
+                </div>
+                <button class="btn btn-primary btn-block">Ajouter</button>
+            </form>
+        </div>
+    </div>
+
+    <div class="col-md-6">
+        <div class="row">
+            <div class="col">
+                <div class="card card-body">
+                <center><h2>Ajouter une information d'accueil</h2></center>
+                <form action="{{url_for('adminviews.addinfo')}}" method="POST">
+                    <div class="form-group">
+                      <input type="text" class="form-control" name="datedb" placeholder="Date">
+                    </div>
+                    <div class="form-group">
+                      <input type="text" class="form-control" name="description" placeholder="Brève description de l'annonce">
+                    </div>
+                    <button class="btn btn-primary btn-block">Ajouter</button>
+              </form>
             </div>
-            <div class="form-group">
-              <input type="text" class="form-control" name="description" placeholder="Brève description de l'annonce">
-            </div>
-            <button class="btn btn-primary btn-block">Ajouter</button>
-      </form>
+        </div>
     </div>
 </div>
 {% endblock %}
