--- a/templates/edit-contact.html
+++ b/templates/edit-contact.html
@@ -3,48 +3,70 @@
 {% block body %}
 
   <div class="row">
-    <div class="col-md-4 offset-md-4">
+    <div class="col-md-8 offset-md-2">
       <div class="card card-body">
         <form action="/update/{{contact.0}}" method="POST">
           <div class="form-group">
             <input type="text" placeholder = "Identifiant" name="username" value="{{contact.1}}" class="form-control">
 
-              <div class="form-group">
-                <input type="text" placeholder = "Nom" name="nom" value="{{contact.6}}" class="form-control">
+                <div class="form-group">
+                  <input type="text" placeholder = "Nom" name="nom" value="{{contact.6}}" class="form-control">
                 </div>
 
                 <div class="form-group">
-                <input type="text" placeholder = "Prénom"  name="prenom" value="{{contact.7}}" class="form-control">
+                  <input type="text" placeholder = "Prénom"  name="prenom" value="{{contact.7}}" class="form-control">
                 </div>
-
-                <div class="form-group">
-                <input type="text" placeholder = "École" name="ecole" value="{{contact.8}}" class="form-control">
-                </div>
-
-                <div class="form-group">
-                <input type="text" placeholder = "Année" name="annee" value="{{contact.9}}" class="form-control">
-                </div>
-
-                <div class="form-group">
-                <input type="text" placeholder = "Spécialité" name="specialite" value="{{contact.11}}" class="form-control">
-                </div>
-
+               
                 <div class="form-group">
                   <input type="text" placeholder = "E-mail"  name="email" value="{{contact.3}}" class="form-control">
                 </div>
 
                 <div class="form-group">
-                <input type="text" placeholder = "Téléphone" name="phone" value="{{contact.10}}" class="form-control">
+                  <input type="text" placeholder = "Téléphone" name="phone" value="{{contact.10}}" class="form-control">
+                </div>
+               
+                <div class="form-group">
+                  École :
+                  <select name ="ecole" id="select" size="1">
+                    <option value="{{contact.8}}">Sélectionnez une option&hellip;</option>
+                    <option value="ESILV">ESILV</option>
+                    <option value="EMLV">EMLV</option>
+                    <option value="IIM">IIM</option>
+                  </select>
                 </div>
 
                 <div class="form-group">
-                  <input type="text" placeholder = "Admin (0|1)" name="admin" value="{{contact.4}}" class="form-control">
+                  Année :
+                  <select name="annee" id="select" size="1">
+                    <option value="{{contact.9}}">Sélectionnez une option&hellip;</option>
+                    <option value="A1">A1</option>
+                    <option value="A2">A2</option>
+                    <option value="A3">A3</option>
+                    <option value="A4">A4</option>
+                    <option value="A5">A5</option>
+                    <option value="Autre">Autre</option>
+                  </select>
                 </div>
 
                 <div class="form-group">
-                  <input type="text" placeholder = "Présent (0|1)" name="present" value="{{contact.5}}" class="form-control">
+                  Spécialité :
+                  <select name="specialite" id="select" size="1">
+                    <option value="{{contact.11}}">Sélectionnez une option&hellip;</option>
+                    <option value="Débat parlementaire">Débat parlementaire</option>
+                    <option value="Débat Libre">Débat libre</option>
+                    <option value="Plaidoirie">Plaidoirie</option>
+                  </select>
                 </div>
-
+ 
+                <div class="form-group">
+                  Admin :
+                  <select name="admin" id="select" size="1">
+                    <option value="{{contact.4}}">Sélectionnez une option&hellip;</option>
+                    <option value="1">Admin</option>
+                    <option value="0">Utilisateur</option>
+                  </select>
+                </div>
+               
                 <div class="form-group">
                   <button type="submit" class="btn btn-primary btn-block">
                     Update
