--- a/templates/login.html
+++ b/templates/login.html
@@ -1,31 +1,54 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Login</title>
-    <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/stylelogin.css') }}">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
-  </head>
-  <body>
-    <div class="login">
-      <h1>Connexion</h1>
-      <div class="links">
-        <a href="{{ url_for('mainviews.login') }}" class="active">Connexion</a>
-        <a href="{{ url_for('mainviews.password') }}">Mot de passe</a>
-      </div>
-      <form action="{{ url_for('mainviews.login') }}" method="post">
-        <label for="username">
-          <i class="fas fa-user"></i>
-        </label>
-        <input type="text" name="username" placeholder="Identifiant" id="username" required>
-        <label for="password">
-          <i class="fas fa-lock"></i>
-        </label>
-        <input type="password" name="password" placeholder="Mot de passe" id="password" required>
-        <div class="msg">{{ msg }}</div>
-        <input type="submit" value="Se connecter">
-      </form>
+{% extends "layout.html" %}
+{% block title%}Home Page{% endblock %}{% block body %} 
+<div class="row">
+    <div class="col">
+        <div class="card card-body">
+            <h2><center>Connexion</center></h2>
+        </div>
     </div>
-  </body>
-</html>
+</div>
+
+<div class="row">
+    <div class="col-md-6">
+        <div class="card card-body">
+            <center><h2>Connexion</h2></center>
+      		<form action="{{ url_for('mainviews.login') }}" method="post">
+      		
+      			<div class="form-group">
+      				<input type="text" name="username" placeholder="Identifiant" class="form-control" required>
+                </div>
+                
+                <div class="form-group">
+                    <input type="password" name="password" placeholder="Mot de passe" class="form-control" required>
+                </div>
+        		
+       			<div class="msg">{{ msg }}</div>
+       			<button class="btn btn-primary btn-block">Connexion</button>
+      		</form>
+    	</div>
+    </div>
+	<div class="col-md-6">
+        <div class="row">
+            <div class="col">
+                <div class="card card-body">
+                <center><h2>Changer le mot de passe</h2></center>
+                <form action="{{ url_for('mainviews.password') }}" method="post">
+                
+        			<div class="form-group">
+      					<input type="text" name="username" placeholder="Identifiant" class="form-control" required>
+                	</div>
+                
+                	<div class="form-group">
+                    	<input type="password" name="password" placeholder="Mot de passe actuel" class="form-control" required>
+                	</div>
+                	
+                	<div class="form-group">
+                    	<input type="password" name="newpassword" placeholder="Nouveau Mot de passe" class="form-control" required>
+                	</div>
+                	
+       				<div class="msg">{{ msg1 }}</div>
+       				
+       				<button class="btn btn-primary btn-block">Changer le Mot de passe</button>
+      				</form>
+                
+{% endblock %}
