--- a/templates/membres.html
+++ b/templates/membres.html
@@ -1,4 +1,11 @@
-{% extends "layout.html" %}{% block title%}Membres{% endblock %}{% block body %}  
+{% extends "layout.html" %}{% block title%}Membres{% endblock %}{% block body %} 
+<div class="row">
+    <div class="col">
+        <div class="card card-body">
+            <h2><center>Membres</center></h2>
+        </div>
+    </div>
+</div>
 <div class="row">
   <div class="col-md-5">
     {% with messages = get_flashed_messages()  %}{% if messages %}{% for message in messages %}
@@ -8,21 +15,12 @@
     </div>
     {% endfor %}{% endif %}{% endwith %}
     <div class="card card-body">
-      <form action="{{url_for('adminviews.add_contact')}}" method="POST">
+      <form action="{{url_for('membreviews.add_contact')}}" method="POST">
         <div class="form-group">
           <input type="text" class="form-control" name="nom" placeholder="Nom">
         </div>
         <div class="form-group">
           <input type="text" class="form-control" name="prenom" placeholder="Prénom">
-        </div>
-        <div class="form-group">
-          <input type="text" class="form-control" name="ecole" placeholder="École">
-        </div>
-        <div class="form-group">
-          <input type="text" class="form-control" name="annee" placeholder="Année">
-        </div>
-        <div class="form-group">
-          <input type="text" class="form-control" name="specialite" placeholder="Specialité">
         </div>
         <div class="form-group">
           <input type="text" class="form-control" name="username" placeholder="Username">
@@ -37,9 +35,47 @@
           <input type="text" class="form-control" name="phone" placeholder="Téléphone">
         </div>
         <div class="form-group">
-          <input type="text" class="form-control" name="admin" placeholder="Admin (0|1)">
+          École :
+          <select name="ecole" id="select" size="1">
+            <option value="None">Sélectionnez une option&hellip;</option>
+            <option value="ESILV">ESILV</option>
+            <option value="EMLV">EMLV</option>
+            <option value="IIM">IIM</option>
+            <option value="Autre">Autre</option>
+          </select>
         </div>
-        <button class="btn btn-primary btn-block">Save</button>
+        <div class="form-group">
+          Année : 
+          <select name="annee" id="select" size="1">
+            <option value="None">Sélectionnez une option&hellip;</option>
+            <option value="A1">A1</option>
+            <option value="A2">A2</option>
+            <option value="A3">A3</option>
+            <option value="A4">A4</option>
+            <option value="A5">A5</option>
+            <option value="Autre">Autre</option>
+          </select>
+        </div>
+        <div class="form-group">
+          Spécialité : 
+          <select name="specialite" id="select" size="1">
+            <option value="None">Sélectionnez une option&hellip;</option>
+            <option value="Débat parlementaire">Débat parlementaire</option>
+            <option value="Débat libre">Débat libre</option>
+            <option value="Plaidoirie">Plaidoirie</option>
+            <option value="Autre">Autre</option>
+          </select>
+        </div>
+
+        <div class="form-group">
+          Profil :
+          <select name="admin" id="select" size="1">
+            <option value="0">Sélectionnez une option&hellip;</option>
+            <option value="1">Admin</option>
+            <option value="0">Utilisateur</option>
+          </select>
+       </div>
+        <button class="btn btn-primary btn-block">Ajouter un membre</button>
       </form>
     </div>
   </div>
