--- a/templates/adminpage.html
+++ b/templates/adminpage.html
@@ -13,11 +13,11 @@
             <center><h2>Ajouter un cours</h2></center>
             <form action="{{url_for('adminviews.add_cours')}}" method="POST">
                 <div class="form-group">
-                    <input type="text" class="form-control" name="titre" placeholder="Titre du cours">
+                    <input type="text" class="form-control" name="titre" placeholder="Titre du cours" required>
                 </div>
                 <div class="form-group">
                     Date :
-                    <input type="date" id="form-control" name="datedb" value={{date}} min={{date}} max="2030-12-31">            
+                    <input type="date" id="form-control" name="datedb" value={{date}} min={{date}} max="2030-12-31" required>            
                 </div>
                 <div class="form-group">
                     Horraire de début :
@@ -29,7 +29,7 @@
                 </div>
                 <div class="form-group">
                     Couleur :
-                    <select name="colors" id="select" size="0.75">
+                    <select name="colors" id="select" size="0.75" required>
                         <option value="">Selectionnez une couleur&hellip;</option>
                         <option value="blue" > Bleu</option>
                         <option value="green"> Vert</option>
@@ -40,7 +40,7 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control" name="lien" placeholder="Lien">
+                    <input type="text" class="form-control" name="lien" placeholder="Lien" required>
                 </div>
                 <button class="btn btn-primary btn-block">Ajouter</button>
             </form>
@@ -54,10 +54,10 @@
                 <center><h2>Ajouter une information d'accueil</h2></center>
                 <form action="{{url_for('adminviews.addinfo')}}" method="POST">
                     <div class="form-group">
-                      <input type="text" class="form-control" name="datedb" placeholder="Date">
+                      <input type="text" class="form-control" name="datedb" placeholder="Date" required>
                     </div>
                     <div class="form-group">
-                      <input type="text" class="form-control" name="description" placeholder="Brève description de l'annonce">
+                      <input type="text" class="form-control" name="description" placeholder="Brève description de l'annonce" required>
                     </div>
                     <button class="btn btn-primary btn-block">Ajouter</button>
               </form>
