--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
     </div>
     <div class="main_content">
         <div class="header" align="center">
-    <img  class="avatar" width="50" height="50" src="/static/lajoute/logo.png"></div>  
+    <img  class="avatar" width="50" height="50" src="static/lajoute/logo.png"></div>  
         <div class="info">
         {% block content %}
 		{% endblock %}
