--- a/templates/edit-contact.html
+++ b/templates/edit-contact.html
@@ -32,6 +32,7 @@
                     <option value="ESILV">ESILV</option>
                     <option value="EMLV">EMLV</option>
                     <option value="IIM">IIM</option>
+                    <option value="Autre">Autre</option>
                   </select>
                 </div>
 
