--- a/templates/edit.html
+++ b/templates/edit.html
@@ -14,6 +14,7 @@
                 <option value="ESILV">ESILV</option>
                 <option value="EMLV">EMLV</option>
                 <option value="IIM">IIM</option>
+                <option value="Autre">Autre</option>
              </select>
          </div>
 
@@ -26,6 +27,7 @@
                 <option value="A3">A3</option>
                 <option value="A4">A4</option>
                 <option value="A5">A5</option>
+                <option value="Autre">Autre</option>
             </select>
           </div>
 
