--- a/templates/membres.html
+++ b/templates/membres.html
@@ -17,26 +17,26 @@
     <div class="card card-body">
       <form action="{{url_for('membreviews.add_contact')}}" method="POST">
         <div class="form-group">
-          <input type="text" class="form-control" name="nom" placeholder="Nom">
+          <input type="text" class="form-control" name="nom" placeholder="Nom" required>
         </div>
         <div class="form-group">
-          <input type="text" class="form-control" name="prenom" placeholder="Prénom">
+          <input type="text" class="form-control" name="prenom" placeholder="Prénom" required>
         </div>
         <div class="form-group">
-          <input type="text" class="form-control" name="username" placeholder="Username">
+          <input type="text" class="form-control" name="username" placeholder="Username" required>
         </div>
         <div class="form-group">
-          <input type="password" class="form-control" name="password" placeholder="Password">
+          <input type="password" class="form-control" name="password" placeholder="Password" required>
         </div>
         <div class="form-group">
-          <input type="text" class="form-control" name="email" placeholder="Email">
+          <input type="text" class="form-control" name="email" placeholder="Email" required>
         </div>
         <div class="form-group">
-          <input type="text" class="form-control" name="phone" placeholder="Téléphone">
+          <input type="text" class="form-control" name="phone" placeholder="Téléphone" required>
         </div>
         <div class="form-group">
           École :
-          <select name="ecole" id="select" size="1">
+          <select name="ecole" id="select" size="1" required>
             <option value="None">Sélectionnez une option&hellip;</option>
             <option value="ESILV">ESILV</option>
             <option value="EMLV">EMLV</option>
@@ -46,7 +46,7 @@
         </div>
         <div class="form-group">
           Année : 
-          <select name="annee" id="select" size="1">
+          <select name="annee" id="select" size="1" required>
             <option value="None">Sélectionnez une option&hellip;</option>
             <option value="A1">A1</option>
             <option value="A2">A2</option>
@@ -58,7 +58,7 @@
         </div>
         <div class="form-group">
           Spécialité : 
-          <select name="specialite" id="select" size="1">
+          <select name="specialite" id="select" size="1" required>
             <option value="None">Sélectionnez une option&hellip;</option>
             <option value="Débat parlementaire">Débat parlementaire</option>
             <option value="Débat libre">Débat libre</option>
@@ -69,7 +69,7 @@
 
         <div class="form-group">
           Profil :
-          <select name="admin" id="select" size="1">
+          <select name="admin" id="select" size="1" required>
             <option value="0">Sélectionnez une option&hellip;</option>
             <option value="1">Admin</option>
             <option value="0">Utilisateur</option>
