--- a/templates/gandalf.html
+++ b/templates/gandalf.html
@@ -25,6 +25,10 @@
          top: -9999px;
          }
       </style>
+
+      <!-- Si vous êtes tombés sur cette page, c'est que vous avez tenté d'avoir une utilisation
+        inhabituelle du site.-->
+
       <script>
          function resizeToMax(id) {
          
