--- a/templates/home.html
+++ b/templates/home.html
@@ -30,6 +30,11 @@
         </form>
     </div>
 </div>
+
+<!-- Si vous voyez ce message, c'est que vous n'êtes pas en train d'utiliser le site dans
+  son utilisation habituelle. Ne vous étonnez pas si vous tombez sur un gandalf qui danse
+  sur une musique saxo -->
+
 <div class="col">
     <table class="table table-striped table-hover table-bordered table-sm bg-white">
       <thead>
