--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 <div class="row">
     <div class="col">
         <div class="card card-body">
-            <h2><center>Connexion</center></h2>
+            <h2><center>La Joute de Vinci</center></h2>
         </div>
     </div>
 </div>
@@ -21,7 +21,7 @@
                 <div class="form-group">
                     <input type="password" name="password" placeholder="Mot de passe" class="form-control" required>
                 </div>
-        		
+                
        			<div class="msg">{{ msg }}</div>
        			<button class="btn btn-primary btn-block">Connexion</button>
       		</form>
@@ -44,7 +44,7 @@
                 	
                 	<div class="form-group">
                     	<input type="password" name="newpassword" placeholder="Nouveau Mot de passe" class="form-control" required>
-                	</div>
+                	</div>        
                 	
        				<div class="msg">{{ msg1 }}</div>
        				
