--- a/templates/base.html
+++ b/templates/base.html
@@ -3,26 +3,28 @@
 <head>
 	<title>{% block title%} {% endblock %}</title>
 	<meta name="viewport" content="width=device-width" />
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/style.css')}}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/style.css')}}">
 	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.5.0/main.min.css">
+    
+  {% block head%} 
 
-  {% block head%} {% endblock %}
+  {% endblock %}
 </head>
 <body>
 	<div class="wrapper">
     <div class="sidebar"> 
     <h2>Menu</h2>
         <ul>
-            <li><a href="home"><i class="fas fa-home"></i>Accueil</a></li>
+            <li><a href="{{ url_for('mainviews.home') }}"><i class="fas fa-home"></i>Accueil</a></li>
             {% if session['logged_in'] == True %}
-            <li><a href="about"><i class="fas fa-calendar"></i>Calendrier</a></li>
-            <li><a href="application"><i class="fas fa-check-square"></i>Présence</a></li>
+            <li><a href="{{ url_for('usersviews.calendar') }}"><i class="fas fa-calendar"></i>Calendrier</a></li>
+            <li><a href="{{ url_for('usersviews.application') }}"><i class="fas fa-check-square"></i>Présence</a></li>
             {% if session['admin'] == 1 %}
-            <li><a href="adminpage"><i class="fas fa-user-circle"></i>Admin</a></li>
-            <li><a href="membres"><i class="fas fa-user"></i>Membres</a></li>
-            <li><a href="sujets"><i class="fas fa-poll-h"></i>Sujets</a></li>
-            <li><a href="index"><i class="fas fa-address-book"></i>Index</a></li>
+            <li><a href="{{ url_for('adminviews.adminpage') }}"><i class="fas fa-user-circle"></i>Admin</a></li>
+            <li><a href="{{ url_for('membreviews.membres') }}"><i class="fas fa-user"></i>Membres</a></li>
+            <li><a href="{{ url_for('adminviews.sujets') }}"><i class="fas fa-poll-h"></i>Sujets</a></li>
+            <li><a href="{{ url_for('adminviews.index') }}"><i class="fas fa-address-book"></i>Index</a></li>
             {% endif %}
             {% endif %}
             <li><a href="logout"></i >Déconnexion</a></li>
@@ -30,11 +32,10 @@
     </div>
     <div class="main_content">
         <div class="header" align="center">
-    <img  class="avatar" width="50" height="50" src="static/lajoute/logo.png"></div>  
+    <img  class="avatar" width="50" height="50" src="/static/lajoute/logo.png"></div>  
         <div class="info">
         {% block content %}
 		{% endblock %}
-      </div>
     </div>
 </div>
 
