--- a/templates/edit-contact.html
+++ b/templates/edit-contact.html
@@ -7,27 +7,27 @@
       <div class="card card-body">
         <form action="/update/{{contact.0}}" method="POST">
           <div class="form-group">
-            <input type="text" placeholder = "Identifiant" name="username" value="{{contact.1}}" class="form-control">
+            <input type="text" placeholder = "Identifiant" name="username" value="{{contact.1}}" class="form-control" required>
 
                 <div class="form-group">
-                  <input type="text" placeholder = "Nom" name="nom" value="{{contact.6}}" class="form-control">
+                  <input type="text" placeholder = "Nom" name="nom" value="{{contact.6}}" class="form-control" required>
                 </div>
 
                 <div class="form-group">
-                  <input type="text" placeholder = "Prénom"  name="prenom" value="{{contact.7}}" class="form-control">
+                  <input type="text" placeholder = "Prénom"  name="prenom" value="{{contact.7}}" class="form-control" required>
                 </div>
                
                 <div class="form-group">
-                  <input type="text" placeholder = "E-mail"  name="email" value="{{contact.3}}" class="form-control">
+                  <input type="email" placeholder = "E-mail"  name="email" value="{{contact.3}}" class="form-control" required>
                 </div>
 
-                <div class="form-group">
-                  <input type="text" placeholder = "Téléphone" name="phone" value="{{contact.10}}" class="form-control">
+                <div class="form-group">            
+                <input type="tel" placeholder = "Téléphone (06 00 00 00 00)" name="phone" value="{{contact.10}}" pattern="[0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2}" class="form-control" required>
                 </div>
                
                 <div class="form-group">
                   École :
-                  <select name ="ecole" id="select" size="1">
+                  <select name ="ecole" id="select" size="1" required>
                     <option value="{{contact.8}}">Sélectionnez une option&hellip;</option>
                     <option value="ESILV">ESILV</option>
                     <option value="EMLV">EMLV</option>
@@ -38,7 +38,7 @@
 
                 <div class="form-group">
                   Année :
-                  <select name="annee" id="select" size="1">
+                  <select name="annee" id="select" size="1" required>
                     <option value="{{contact.9}}">Sélectionnez une option&hellip;</option>
                     <option value="A1">A1</option>
                     <option value="A2">A2</option>
@@ -51,7 +51,7 @@
 
                 <div class="form-group">
                   Spécialité :
-                  <select name="specialite" id="select" size="1">
+                  <select name="specialite" id="select" size="1" required>
                     <option value="{{contact.11}}">Sélectionnez une option&hellip;</option>
                     <option value="Débat parlementaire">Débat parlementaire</option>
                     <option value="Débat Libre">Débat libre</option>
@@ -61,7 +61,7 @@
  
                 <div class="form-group">
                   Admin :
-                  <select name="admin" id="select" size="1">
+                  <select name="admin" id="select" size="1" required>
                     <option value="{{contact.4}}">Sélectionnez une option&hellip;</option>
                     <option value="1">Admin</option>
                     <option value="0">Utilisateur</option>
