--- a/templates/edit.html
+++ b/templates/edit.html
@@ -3,13 +3,13 @@
 {% block body %}
 
   <div class="row">
-    <div class="col-md-4 offset-md-4">
+  	<div class="col-md-8 offset-md-2">
       <div class="card card-body">
         <form action="edituser/{{contact.0}}" method="POST">
          
         <div class="form-group">
              École :
-             <select name="ecole">
+             <select name="ecole" required>
                 <option value="{{contact.8}}">Selectionnez une option&hellip;</option>
                 <option value="ESILV">ESILV</option>
                 <option value="EMLV">EMLV</option>
@@ -20,7 +20,7 @@
 
          <div class="form-group">
             Année :
-            <select name="annee">
+            <select name="annee" required>
                 <option value="{{contact.9}}">Selectionnez une option&hellip;</option>
                 <option value="A1">A1</option>
                 <option value="A2">A2</option>
@@ -32,11 +32,11 @@
           </div>
 
           <div class="form-group">
-            <input type="text" placeholder = "Téléphone" name="phone" value="{{contact.10}}" class="form-control">
+            <input type="tel" placeholder = "Téléphone (06 00 00 00 00)" name="phone" value="{{contact.10}}" pattern="[0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2}" class="form-control" required>
           </div>
 
           <div class="form-group">
-            <input type="text" placeholder = "E-mail" name="email" value="{{contact.3}}" class="form-control">
+            <input type="email" placeholder = "E-mail" name="email" value="{{contact.3}}" class="form-control" required>
           </div>
 
           <div class="form-group">
