--- a/templates/editsujet.html
+++ b/templates/editsujet.html
@@ -3,12 +3,15 @@
 {% block body %}
 
   <div class="row">
-    <div class="col-md-6 offset-md-3">
+  	<div class="col-md-8 offset-md-2">
       <div class="card card-body">
         <form action="/{{sujet.0}}" method="POST">
+        
           <div class="form-group">
             <input type="text" placeholder = "Sujet" name="sujet" value="{{sujet.1}}" class="form-control">
           </div>
+          
+          <div class="form-group">
           Type : 
           <select name = "type">
             <option value="{{sujet.2}}">Sélectionnez une option&hellip;</option>
@@ -16,12 +19,13 @@
             <option value="Plaidoirie">Plaidoirie</option>
             <option value="Sujet fun">Sujet fun</option>
           </select>
-
+			
           <div class="form-group">
             <button type="submit" class="btn btn-primary btn-block">
               Update
             </button>
           </div>
+          
         </form>
       </div>
     </div>
