--- a/templates/membres.html
+++ b/templates/membres.html
@@ -29,15 +29,15 @@
           <input type="password" class="form-control" name="password" placeholder="Password" required>
         </div>
         <div class="form-group">
-          <input type="text" class="form-control" name="email" placeholder="Email" required>
+          <input type="email" class="form-control" name="email" placeholder="Email" required>
         </div>
         <div class="form-group">
-          <input type="text" class="form-control" name="phone" placeholder="Téléphone" required>
+          <input type="tel" placeholder = "Téléphone (06 00 00 00 00)" name="phone" pattern="[0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2} [0-9]{2}" class="form-control" required>
         </div>
         <div class="form-group">
           École :
           <select name="ecole" id="select" size="1" required>
-            <option value="None">Sélectionnez une option&hellip;</option>
+            <option value="ESILV">Sélectionnez une option&hellip;</option>
             <option value="ESILV">ESILV</option>
             <option value="EMLV">EMLV</option>
             <option value="IIM">IIM</option>
@@ -47,7 +47,7 @@
         <div class="form-group">
           Année : 
           <select name="annee" id="select" size="1" required>
-            <option value="None">Sélectionnez une option&hellip;</option>
+            <option value="A1">Sélectionnez une option&hellip;</option>
             <option value="A1">A1</option>
             <option value="A2">A2</option>
             <option value="A3">A3</option>
@@ -59,7 +59,7 @@
         <div class="form-group">
           Spécialité : 
           <select name="specialite" id="select" size="1" required>
-            <option value="None">Sélectionnez une option&hellip;</option>
+            <option value="Débat parlementaire">Sélectionnez une option&hellip;</option>
             <option value="Débat parlementaire">Débat parlementaire</option>
             <option value="Débat libre">Débat libre</option>
             <option value="Plaidoirie">Plaidoirie</option>
