--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
             <li><a href="{{ url_for('adminviews.index') }}"><i class="fas fa-address-book"></i>Index</a></li>
             {% endif %}
             {% endif %}
-            <li><a href="logout"></i >Déconnexion</a></li>
+            <li><a href="{{ url_for('mainviews.logout') }}"></i >Déconnexion</a></li>
         </ul> 
     </div>
     <div class="main_content">
